# SK2-Wisielec

./: README.md  kli.py  klient  klient.cpp  serv  server.cpp
Hangman-main/: CMakeLists.txt
Hangman-main/client/: CMakeLists.txt  main.cpp  menu.cpp  menu.h  menu.ui  mywidget.cpp  mywidget.h  mywidget.ui
Hangman-main/server/: CMakeLists.txt  Makefile  Wisielec.cpp  Wisielec.h  main.cpp  wisielec.out
Hangman-main/server/topics/: CELEBRYCI.txt  PKP.txt  SWIETA.txt
